[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Joseph Cheverton-Wynne <jchevertonwynne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.2"
bytecount = "0.6.2"
fnv = "1.0.7"
ring-algorithm = "0.2.2"
regex = "1.4.2"